workflow: print powrap version on prepare

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -37,6 +37,7 @@ jobs:
         venv/bin/pip --version
         venv/bin/tx --version
         venv/bin/sphinx-intl --help
+        venv/bin/powrap --version
 
     - name: If failed, make the log file an artifact
       if: failure()
