workflow: do not run on forks

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
 
+    if: (github.event_name == 'schedule' && github.repository == 'python/python-docs-pt-br') || (github.event_name != 'schedule')
+
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
