Add support to pomerge
Use JulienPalard and seluj78's pomerge tool to merge translations
from current branch with older branches, making it possible to
keep documentations of older versions of Python up-to-date with
latest translations.

workflow: add pomerge step

Makefile: add 'merge' target

requirements: add pomerge to be installed by pip

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -93,6 +93,11 @@ jobs:
         name: spellchecking-output
         path: pospell-out.tar.gz
 
+    - name: Merge translations with older branches
+      run: make merge
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Build documentation treating warnings as errors
       run: |
         make build CPYTHON_PATH=/tmp/cpython/
