workflow: Fix build-output step name

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -124,7 +124,7 @@ jobs:
     - uses: actions/setup-python@v2
     - run: make build CPYTHON_PATH=/tmp/cpython/ 2> >(tee -a build-log.txt >&2)
 
-    - name: Update artifact spellchecking-output
+    - name: Update artifact build-output
       if: ${{ failure() }}
       uses: actions/upload-artifact@v2
       with:
