workflow: do not run any jobs on forks
Currently, the 'update' job does not run, so other jobs are canceled.
However, they are still listed in Actions daily run as canceled.  The
intention of this commit is to not show at all.

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -56,6 +56,7 @@ jobs:
 
   # Job to check spelling of translations
   spellcheck:
+    if: (github.event_name == 'schedule' && github.repository == 'python/python-docs-pt-br') || (github.event_name != 'schedule')
     needs: update
     runs-on: ubuntu-latest
     strategy:
@@ -84,6 +85,7 @@ jobs:
 
   # Job to merge translation from current BRANCH to older ones
   merge:
+    if: (github.event_name == 'schedule' && github.repository == 'python/python-docs-pt-br') || (github.event_name != 'schedule')
     needs: update
     runs-on: ubuntu-latest
     strategy:
@@ -111,6 +113,7 @@ jobs:
 
   # Job to build translated documentation treating warnings as errors
   build-warn-as-err:
+    if: (github.event_name == 'schedule' && github.repository == 'python/python-docs-pt-br') || (github.event_name != 'schedule')
     needs: update
     runs-on: ubuntu-latest
     strategy:
