--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -14,21 +14,17 @@ jobs:
   # Job to pull, build and push translations from Transifex to the repository
   update:
     if: (github.event_name == 'schedule' && github.repository == 'python/python-docs-pt-br') || (github.event_name != 'schedule')
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
-
     steps:
     - uses: actions/checkout@v2
       with:
         ref: ${{ env.BRANCH }}
-
     - uses: actions/setup-python@v2
     - run: sudo apt update
     - run: sudo apt install -y gettext
     - run: make tx-config
-
     - name: Run make pull
       run: |
         if [[ -n "$TRANSIFEX_APIKEY" ]]; then
@@ -43,9 +39,7 @@ jobs:
         git status --short
       env:
           TRANSIFEX_APIKEY: ${{ secrets.TRANSIFEX_APIKEY }}
-
     - run: make build CPYTHON_PATH=/tmp/cpython/ SPHINXERRORHANDLING=''
-
     - name: Run make push
       run: |
         git config user.email "github-actions[bot]@users.noreply.github.com"
@@ -61,22 +55,18 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
-
     steps:
     - uses: actions/checkout@v2
       with:
         ref: ${{ env.BRANCH }}
-
     - uses: actions/setup-python@v2
     - run: sudo apt update
     - run: sudo apt install -y gettext hunspell hunspell-pt-br
-
     - name: Run make spell
       run: |
         make spell
         cd .pospell/
         tar -czf ../pospell-out.tar.gz *.txt **/*.txt
-
     - name: Update artifact spellchecking-output
       uses: actions/upload-artifact@v2
       with:
@@ -90,19 +80,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
-
     steps:
     - uses: actions/checkout@v2
       with:
         ref: ${{ env.BRANCH }}
-
-    - run: |
-        git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
-
+    - run: git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
     - uses: actions/setup-python@v2
     - run: sudo apt update
     - run: sudo apt install -y gettext
-
     - name: Run make push
       run: |
         git config user.email "github-actions[bot]@users.noreply.github.com"
@@ -118,15 +103,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
-
     steps:
     - uses: actions/checkout@v2
       with:
         ref: ${{ env.BRANCH }}
-
     - uses: actions/setup-python@v2
     - run: make build CPYTHON_PATH=/tmp/cpython/ 2> >(tee -a build-log.txt >&2)
-
     - name: Update artifact build-output
       if: ${{ failure() }}
       uses: actions/upload-artifact@v2
