fix: run workflow with python 3.9
By not setting Python version, 3.10 is currently used.
transifex-client >0.13 seems to requires python <3.10,
so using Python 3.10 makes pip install 0.12.5 (too old!)
Force 3.9 to use the latest transifex-client version.

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -22,6 +22,8 @@ jobs:
       with:
         ref: ${{ env.BRANCH }}
     - uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
     - run: sudo apt update
     - run: sudo apt install -y gettext
     - run: make tx-config
