workflow: add workflow_dispatch flag
This allows to run manually from GitHub web interface

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,7 +1,8 @@
 name: Build and update documentation
 
-# Daily at 23 pm
+# Daily at 23 pm, or manually
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 23 * * *'
 
