--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -148,7 +148,7 @@ jobs:
         name: build-output
         path: build-log.txt
     - uses: appleboy/telegram-action@master
-      if: ${{ failure() }}
+      if: ( ${{ failure() }} && github.event_name != 'workflow_dispatch' )
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
