refactor: migrate to new Transifex client
The old Python-based Transifex Client implements Transifex APIv2,
which is deprecated and will sunset on 30 november in 2023.
So this commit implements the use of the new golang-based
Transifex Client.

See deprecation msg in https://docs.transifex.com/client/introduction

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -37,6 +37,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
+      - name: Install Transifex CLI
+        run: |
+          curl -o- https://raw.githubusercontent.com/transifex/cli/master/install.sh | bash
+          mv tx /usr/local/bin/tx
       - name: Install dependencies
         run: |
           sudo apt update -y && sudo apt install gettext -y
