--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -58,9 +58,7 @@ jobs:
         run: |
           powrap --modified
       - name: Commit and push changes
-        if: |
-          github.repository == 'python/python-docs-pt-br' &&
-          ! github.event_name == 'pull_request'
+        if: github.repository == 'python/python-docs-pt-br'
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
@@ -119,8 +117,7 @@ jobs:
           powrap --modified -C ${{ matrix.branch }}
       - name: Commit and push changes
         if: |
-          github.repository == 'python/python-docs-pt-br' &&
-          ! github.event_name == 'pull_request'
+          github.repository == 'python/python-docs-pt-br'
         run: |
           cd ${{ matrix.branch }}
           git config user.name github-actions
