CI: Update to 3.11
Disable 3.6 and 2.7

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -7,16 +7,16 @@ on:
       - '.github/workflows/update.yml'
       - 'scripts/update.sh'
     branches:
-      - '*'
-      - '*/*'
-      - '**'
-      - '!3.?'
-      - '!2.*'
+      - '3.7'
+      - '3.8'
+      - '3.9'
+      - '3.10'
+      - '3.11'
   schedule:
     - cron: '0 23 * * *'
 
 env:
-  CPYTHON_BRANCH: '3.10'
+  CPYTHON_BRANCH: '3.11'
   LANGUAGE: 'pt_BR'
 
 jobs:
@@ -76,9 +76,9 @@ jobs:
     needs: [update]
     strategy:
       matrix:
-        branch: [ 3.9, 3.8, 3.7, 3.6, 2.7 ]
+        branch: [ '3.10', '3.9', '3.8', '3.7' ]
         include:
-          - branch: 3.9
+          - branch: 3.10
             overwrite: true
     runs-on: ubuntu-latest
     steps:
