--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
+# we want only the PO files
 *.mo
-.tx/**/*.po
+*.po~
+
+# we don't want venv directories
 venv/
-.pospell/
+.venv/
+
+# cpython checkout shouldn't be added
 cpython/
+
+# No need to keep logs
+logs/
