--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,144 +1,193 @@
-name: Update translations
+name: Update
 
 on:
   workflow_dispatch:
+    inputs:
+      BRANCH:
+        description: CPython branch to use 
+        required: false
+        type: string
+        default: '3.11'
   push:
     paths:
       - '.github/workflows/update.yml'
-      - 'scripts/update.sh'
+      - 'Makefile'
     branches:
-      - '3.7'
-      - '3.8'
-      - '3.9'
-      - '3.10'
       - '3.11'
+      - '3.10'
+      - '3.9'
+      - '3.8'
+      - '3.7'
   schedule:
     - cron: '0 23 * * *'
 
-env:
-  CPYTHON_BRANCH: '3.11'
-  LANGUAGE: 'pt_BR'
+permissions:
+      contents: read
 
 jobs:
-  update:
-    # Job to pull translation from Transifex platform, and commit & push changes
+  # Download translations from Transifex, keep PO and Logs artifacts
+  pull:
+    name: Pull from Transifex
     runs-on: ubuntu-latest
     steps:
       - name: Check out ${{ github.repository }}
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
+          
+      - name: Extract branch name
+        if: github.event != 'workflow_dispatch'
+        shell: bash
+        run: echo "BRANCH=$(echo ${GITHUB_REF#refs/heads/})" >>$GITHUB_ENV
+      
+      - name: ... or set branch name if manually run
+        if: github.event == 'workflow_dispatch'
+        run: echo "BRANCH=${{ github.event.inputs.BRANCH }}" >> $GITHUB_ENV
+      
       - name: Check out CPython
         uses: actions/checkout@v3
         with:
           repository: python/cpython
-          persist-credentials: false
-          ref: ${{ env.CPYTHON_BRANCH }}
+          ref: ${{ env.BRANCH }}
           path: cpython
-      - name: Set up Python 3.9
+        
+      - name: Set up Python 3
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3'
           cache: 'pip'
-          cache-dependency-path: '**/requirements*.txt'
-      - name: Install Transifex CLI
-        run: |
-          curl -o- https://raw.githubusercontent.com/transifex/cli/master/install.sh | bash
-        working-directory: /usr/local/bin
+          cache-dependency-path: |
+            'requirements.txt'
+            '${{ env.CPYTHON_DIR }}/requirements.txt'
+        
       - name: Install dependencies
-        run: |
-          sudo apt update -y && sudo apt install gettext -y
-          pip3 install --upgrade pip
-          pip3 install -r requirements.txt -r cpython/Doc/requirements.txt
-      - name: Update translations
-        run: |
-          sh scripts/update.sh
+        run: sudo apt update -y && sudo apt install gettext tree -y
+      
+      - name: Pull translations
+        run: make pull TX_CLI_DIR=/usr/local/bin
         env:
           TX_TOKEN: ${{ secrets.TX_TOKEN }}
-          LANGUAGE: ${{ env.LANGUAGE }}
-      - name: Wrap catalog message files
-        run: |
-          powrap --modified
+        
+      - name: Upload artifact - po files
+        uses: actions/upload-artifact@v3
+        with:
+          name: translations
+          path: |
+            *.po
+            **/*.po
+            .tx/
+
+      - name: Upload artifact - log files
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: pull-logs
+          path: logs/*
+
+
+  # Job for getting po files downloaded and storing this repository
+  push:
+    if: github.repository == 'python/python-docs-pt-br'
+    name: Push to repo
+    needs: [pull]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Check out ${{ github.repository }}
+        uses: actions/checkout@v3
+
+      - name: Download PO files
+        uses: actions/download-artifact@v3
+        with:
+          name: translations
+    
+      - name: Changed files
+        run: git status
+        
       - name: Commit and push changes
-        if: github.repository == 'python/python-docs-pt-br'
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git status
-          git add -A
-          git diff-index --quiet HEAD || ( git commit -m "Update translations from Transifex" && git push )
+          make push
 
+
+  # Merge translations previously updated into older branches to make sure
+  # older versions of Python Docs gets translated as well.
+  # 'overwrite=true' means strings previously translated will get overwritten;
+  # other branches will preserve translated strings, only filling in new
+  # translations.
   merge:
-    # Merge translations previously updated into older branches to make sure
-    # older versions of Python Docs gets translated as well.
-    # 'overwrite=true' means strings previously translated will get overwritten;
-    # other branches will preserve translated strings, only filling in new
-    # translations.
-    name: merge into ${{ matrix.branch }}
-    needs: [update]
+    name: Merge into ${{ matrix.branch }}
+    needs: [push]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
     strategy:
+      fail-fast: false
+      max-parallel: 3
       matrix:
-        branch: [ '3.10', '3.9', '3.8', '3.7' ]
+        branch: ['3.10', '3.9', '3.8', '3.7', '3.6', '2.7']
         include:
           - branch: 3.10
             overwrite: true
-    runs-on: ubuntu-latest
     steps:
       - name: Get current branch name
         shell: bash
         run:
           echo "CURRENT_BRANCH=$(echo ${GITHUB_REF#refs/heads/} | tr / -)" >> $GITHUB_ENV
+      
       - name: Check out source branch (${{ env.CURRENT_BRANCH }})
         uses: actions/checkout@v3
         with:
           path: ${{ env.CURRENT_BRANCH }}
           persist-credentials: false
+      
       - name: Check out target branch (${{ matrix.branch }})
         uses: actions/checkout@v3
         with:
           ref: ${{ matrix.branch }}
           path: ${{ matrix.branch }}
-      - name: Set up Python 3.10
+      
+      - name: Set up Python 3
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3'
+          cache: 'pip'
+          cache-dependency-path: "${{ env.CURRENT_BRANCH }}/requirements.txt"
+      
       - name: Install dependencies
         run: |
           sudo apt update -y && sudo apt install gettext -y
           pip3 install pomerge powrap
+      
       - name: Merge overwriting on stable release branch
         if: ${{ matrix.overwrite == true }}
         run: |
           pomerge --from ${{ env.CURRENT_BRANCH }}/**/*.po --to ${{ matrix.branch }}/**/*.po
+      
       - name: Merge without overwriting on EOL or security-fix release branch
         if: ${{ matrix.overwrite != true }}
         run: |
           pomerge --no-overwrite --from ${{ env.CURRENT_BRANCH }}/**/*.po --to ${{ matrix.branch }}/**/*.po
+      
       - name: Wrap catalog message files
         run: |
           powrap --modified -C ${{ matrix.branch }}
+      
       - name: Commit and push changes
-        if: |
-          github.repository == 'python/python-docs-pt-br'
+        if: github.repository == 'python/python-docs-pt-br'
         run: |
-          cd ${{ matrix.branch }}
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git status
-          git add -A
-          git diff-index --quiet HEAD || ( git commit -m "Merge ${{ env.CURRENT_BRANCH }} into ${{ matrix.branch }}" && git push )
+          make push MSG="Merge ${{ env.CURRENT_BRANCH }} into ${{ matrix.branch }}"
+        working-directory: ${{ matrix.branch }}
 
+
+  # Call the check.yml workflow after updating to run some tests
   call-build:
-    # Call the build workflow after updating
     name: call
-    needs: [update]
-    uses: ./.github/workflows/build.yml
-    with:
-      was-called: yes
-    secrets:
-      TELEGRAM_TO: ${{ secrets.TELEGRAM_TO }}
-      TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+    needs: pull
+    uses: ./.github/workflows/check.yml
+    secrets: inherit
 
-  call-compendium:
-    # Call the compendium workflow after updating
-    name: call
-    needs: [update]
-    uses: ./.github/workflows/compendium.yml
