--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,31 @@
+alabaster==0.7.13
+Babel==2.12.1
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+docutils==0.17.1
+idna==3.4
+imagesize==1.4.1
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+packaging==23.1
+pipdeptree==2.7.0
+polib==1.2.0
+pomerge==0.1.4
+pospell==1.1
+powrap==1.0.1
+Pygments==2.15.1
+regex==2023.3.23
+requests==2.28.2
+snowballstemmer==2.2.0
+Sphinx==5.3.0
 sphinx-intl==2.1.0
-powrap
-pomerge
+sphinx-lint==0.6.7
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+tqdm==4.65.0
+urllib3==1.26.15
