Add pull_request trigger to check.yml

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,6 +11,7 @@ on:
         required: false
         type: boolean
         default: true
+  pull_request:
   push:
     paths:
       - '.github/workflows/check.yml'
