use requirements in compendium check.yml

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -195,12 +195,12 @@ jobs:
         run: |
           sudo apt update -y && sudo apt install gettext -y
           pip3 install --upgrade pip
-          pip3 install translate-toolkit powrap
+          pip3 install -r requirements.txt
           
       - name: Generate compendium from PO files
         run: |
           pocompendium --correct compendium.po *.po **/*.po
-          powrap pocompendium.po
+          powrap compendium.po
           
       - name: Upload artifact
         uses: actions/upload-artifact@v3
