--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,9 +1,9 @@
 version: 2
 build:
-  os: ubuntu-20.04
+  os: ubuntu-22.04
   tools:
     python: "3.9"
   commands:
     - git checkout 3.11
-    - make build
-    - rsync -r cpython/Doc/build/html/ _readthedocs/html
+    - make build SPHINXERRORHANDLING=""
+    - cp -r cpython/Doc/build/html/ _readthedocs/html
