--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,4 +6,5 @@ build:
   commands:
     - git checkout 3.11
     - make build SPHINXERRORHANDLING=""
+    - install -dm755 _readthedocs/html
     - cp -r cpython/Doc/build/html/ _readthedocs/html
