Copy built docs, not the whole html dir in .readthedocs.yaml

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,4 +7,4 @@ build:
     - git checkout 3.11
     - make build SPHINXERRORHANDLING=""
     - install -dm755 _readthedocs/html
-    - cp -r cpython/Doc/build/html/ _readthedocs/html
+    - cp -r cpython/Doc/build/html/* _readthedocs/html
