Reduce check.yml scope in pull_request

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,11 +12,21 @@ on:
         type: boolean
         default: true
   pull_request:
+    branches:
+      - '3.11'
+    paths:
+      - '.github/workflows/check.yml'
+      - '.github/prepmsg.sh'
+      - 'Makefile'
+      - 'requirements.txt'
+      - '*.po'
+      - '**/*.po'
   push:
     paths:
       - '.github/workflows/check.yml'
       - '.github/prepmsg.sh'
       - 'Makefile'
+      - 'requirements.txt'
       - '*.po'
       - '**/*.po'
 
