close quotes in update.yml

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -124,7 +124,7 @@ jobs:
       - name: Commit and push changes
         if: |
           github.repository == 'python/python-docs-pt-br' && 
-          github.event != 'pull_request
+          github.event != 'pull_request'
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
@@ -207,7 +207,7 @@ jobs:
       - name: Commit and push changes
         if: |
           github.repository == 'python/python-docs-pt-br' && 
-          github.event != 'pull_request
+          github.event != 'pull_request'
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
