Keep sphinx logs from tmp in update.yml

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -95,7 +95,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: pull-logs
-          path: logs/*
+          path: |
+            logs/*
+            /tmp/*.log
 
 
   # Job for getting po files downloaded and storing this repository
