--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -76,7 +76,7 @@ jobs:
       
       - name: Pull translations
         run: |
-          make tx-config
+          make tx-config TX_CLI_DIR=/usr/local/bin
           if [ "${{ github.event_name }}" != 'pull_request' ]; then
             make pull -o tx-config TX_CLI_DIR=/usr/local/bin
           fi
