Fix event name checking in update.yml

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -158,7 +158,7 @@ jobs:
       - name: Get branch name on push or schedule
         if: |
           github.event_name == 'push' ||
-          github.event == 'schedule'
+          github.event_name == 'schedule'
         run: echo "CURRENT_BRANCH=${GITHUB_REF_NAME}" >>$GITHUB_ENV
       
       - name: Get branch name on pull
