--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -7,20 +7,21 @@ on:
         description: CPython branch to use 
         required: false
         type: string
-        default: '3.11'
+        default: '3.12'
   pull_request:
     paths:
       - '.github/workflows/update.yml'
       - 'Makefile'
       - 'requirements.txt'
     branches:
-      - '3.11'
+      - '3.12'
   push:
     paths:
       - '.github/workflows/update.yml'
       - 'Makefile'
       - 'requirements.txt'
     branches:
+      - '3.12'
       - '3.11'
       - '3.10'
       - '3.9'
@@ -39,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out ${{ github.repository }}
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.2
           
       - name: Get branch name on push or schedule
         if: |
@@ -56,14 +57,14 @@ jobs:
         run: echo "BRANCH=${{ github.event.inputs.BRANCH }}" >> $GITHUB_ENV
       
       - name: Check out CPython
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.2
         with:
           repository: python/cpython
           ref: ${{ env.BRANCH }}
           path: cpython
         
       - name: Set up Python 3
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v4.6.1
         with:
           python-version: '3'
           cache: 'pip'
@@ -84,7 +85,7 @@ jobs:
           TX_TOKEN: ${{ secrets.TX_TOKEN }}
         
       - name: Upload artifact - po files
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3.1.2
         with:
           name: translations
           path: |
@@ -94,7 +95,7 @@ jobs:
 
       - name: Upload artifact - log files
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3.1.2
         with:
           name: pull-logs
           path: |
@@ -111,10 +112,10 @@ jobs:
       contents: write
     steps:
       - name: Check out ${{ github.repository }}
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.2
 
       - name: Download PO files
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v3.0.2
         with:
           name: translations
     
@@ -150,9 +151,9 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        branch: ['3.10', '3.9', '3.8', '3.7', '3.6', '2.7']
+        branch: ['3.11', '3.10', '3.9', '3.8', '3.7', '3.6', '2.7']
         include:
-          - branch: 3.10
+          - branch: 3.11
             overwrite: true
     steps:
       - name: Get branch name on push or schedule
@@ -170,19 +171,19 @@ jobs:
         run: echo "CURRENT_BRANCH=${{ github.event.inputs.BRANCH }}" >> $GITHUB_ENV
       
       - name: Check out source branch (${{ env.CURRENT_BRANCH }})
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.2
         with:
           path: ${{ env.CURRENT_BRANCH }}
           persist-credentials: false
       
       - name: Check out target branch (${{ matrix.branch }})
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.2
         with:
           ref: ${{ matrix.branch }}
           path: ${{ matrix.branch }}
       
       - name: Set up Python 3
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v4.6.1
         with:
           python-version: '3'
           cache: 'pip'
