Fix action version syntax in check.yml

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -87,7 +87,7 @@ jobs:
           
       - name: Notify via Telegram
         if: steps.prepare.outcome == 'success'
-        uses: appleboy/telegram-action@0.1.1
+        uses: appleboy/telegram-action@v0.1.1
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
@@ -139,7 +139,7 @@ jobs:
       #    
       #- name: Notify via Telegram
       #  if: step.prepare.outcome == 'success'
-      #  uses: appleboy/telegram-action@0.1.1
+      #  uses: appleboy/telegram-action@v0.1.1
       #  with:
       #    to: ${{ secrets.TELEGRAM_TO }}
       #    token: ${{ secrets.TELEGRAM_TOKEN }}
