--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -5,12 +5,6 @@ name: Check
 on:
   workflow_dispatch:
   workflow_call:
-    inputs:
-      called:
-        description: This tells it was called
-        required: false
-        type: boolean
-        default: true
   pull_request:
     branches:
       - '3.12'
@@ -45,7 +39,7 @@ jobs:
           persist-credentials: false
       
       - name: Download PO files (if called)
-        if: github.event.inputs.called == true
+        if: github.event_name == "workflow_dispatch"
         uses: actions/download-artifact@v3.0.2
         with:
           name: translations
@@ -106,7 +100,7 @@ jobs:
           persist-credentials: false
       
       - name: Download PO files (if called)
-        if: github.event.inputs.called == true
+        if: github.event_name == "workflow_dispatch"
         uses: actions/download-artifact@v3.0.2
         with:
           name: translations
@@ -158,7 +152,7 @@ jobs:
           persist-credentials: false
       
       - name: Download PO files (if called)
-        if: github.event.inputs.called == true
+        if: github.event_name == "workflow_dispatch"
         uses: actions/download-artifact@v3.0.2
         with:
           name: translations
@@ -191,7 +185,7 @@ jobs:
           persist-credentials: false
           
       - name: Download PO files (if called)
-        if: github.event.inputs.called == true
+        if: github.event_name == "workflow_dispatch"
         uses: actions/download-artifact@v3.0.2
         with:
           name: translations
