Check artifact exists prior downloading in check.yml

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -38,8 +38,13 @@ jobs:
         with:
           persist-credentials: false
       
+      - uses: xSAVIKx/artifact-exists-action@v0
+        id: "check_workflow_exists"
+        with:
+          name: 'translations'
+      
       - name: Download PO files (if called)
-        if: github.event_name == "workflow_dispatch"
+        if: "${{ steps.check_workflow_exists.outputs.exists }}"
         uses: actions/download-artifact@v3.0.2
         with:
           name: translations
@@ -99,8 +104,13 @@ jobs:
         with:
           persist-credentials: false
       
+      - uses: xSAVIKx/artifact-exists-action@v0
+        id: "check_workflow_exists"
+        with:
+          name: 'translations'
+      
       - name: Download PO files (if called)
-        if: github.event_name == "workflow_dispatch"
+        if: "${{ steps.check_workflow_exists.outputs.exists }}"
         uses: actions/download-artifact@v3.0.2
         with:
           name: translations
@@ -151,8 +161,13 @@ jobs:
         with:
           persist-credentials: false
       
+      - uses: xSAVIKx/artifact-exists-action@v0
+        id: "check_workflow_exists"
+        with:
+          name: 'translations'
+      
       - name: Download PO files (if called)
-        if: github.event_name == "workflow_dispatch"
+        if: "${{ steps.check_workflow_exists.outputs.exists }}"
         uses: actions/download-artifact@v3.0.2
         with:
           name: translations
@@ -184,8 +199,13 @@ jobs:
         with:
           persist-credentials: false
           
+      - uses: xSAVIKx/artifact-exists-action@v0
+        id: "check_workflow_exists"
+        with:
+          name: 'translations'
+      
       - name: Download PO files (if called)
-        if: github.event_name == "workflow_dispatch"
+        if: "${{ steps.check_workflow_exists.outputs.exists }}"
         uses: actions/download-artifact@v3.0.2
         with:
           name: translations
