call check.yml on push job, not on pull

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -38,22 +38,14 @@ jobs:
         with:
           persist-credentials: false
       
-      - uses: xSAVIKx/artifact-exists-action@v0
-        id: "check_workflow_exists"
-        with:
-          name: 'translations'
-      
-      - name: Download PO files (if called)
-        if: "${{ steps.check_workflow_exists.outputs.exists }}"
-        uses: actions/download-artifact@v3.0.2
-        with:
-          name: translations
-      
       - name: Set up Python 3
         uses: actions/setup-python@v4.6.1
         with:
           python-version: '3'
-          
+      
+      - name: Make sure the repository is up to date
+        run: git pull --rebase
+      
       - name: Build docs
         continue-on-error: true
         id: build
@@ -104,22 +96,14 @@ jobs:
         with:
           persist-credentials: false
       
-      - uses: xSAVIKx/artifact-exists-action@v0
-        id: "check_workflow_exists"
-        with:
-          name: 'translations'
-      
-      - name: Download PO files (if called)
-        if: "${{ steps.check_workflow_exists.outputs.exists }}"
-        uses: actions/download-artifact@v3.0.2
-        with:
-          name: translations
-      
       - name: Set up Python 3
         uses: actions/setup-python@v4.6.1
         with:
           python-version: '3'
-          
+      
+      - name: Make sure the repository is up to date
+        run: git pull --rebase
+      
       - name: Run sphinx-lint
         continue-on-error: true
         id: lint
@@ -161,21 +145,13 @@ jobs:
         with:
           persist-credentials: false
       
-      - uses: xSAVIKx/artifact-exists-action@v0
-        id: "check_workflow_exists"
-        with:
-          name: 'translations'
-      
-      - name: Download PO files (if called)
-        if: "${{ steps.check_workflow_exists.outputs.exists }}"
-        uses: actions/download-artifact@v3.0.2
-        with:
-          name: translations
-      
       - name: Set up Python 3
         uses: actions/setup-python@v4.6.1
         with:
           python-version: '3'
+      
+      - name: Make sure the repository is up to date
+        run: git pull --rebase
       
       - name: Run pospell
         continue-on-error: true
@@ -198,23 +174,15 @@ jobs:
         uses: actions/checkout@v3.5.2
         with:
           persist-credentials: false
-          
-      - uses: xSAVIKx/artifact-exists-action@v0
-        id: "check_workflow_exists"
-        with:
-          name: 'translations'
-      
-      - name: Download PO files (if called)
-        if: "${{ steps.check_workflow_exists.outputs.exists }}"
-        uses: actions/download-artifact@v3.0.2
-        with:
-          name: translations
       
       - name: Set up Python 3
         uses: actions/setup-python@v4.6.1
         with:
           python-version: '3'
-          
+      
+      - name: Make sure the repository is up to date
+        run: git pull --rebase
+      
       - name: Install dependencies
         run: |
           sudo apt update -y && sudo apt install gettext -y
