--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -225,7 +225,7 @@ jobs:
   # Call the check.yml workflow after updating to run some tests
   call-build:
     name: call
-    needs: pull
+    needs: push
     if: github.event_name != 'pull_request'
     uses: ./.github/workflows/check.yml
     secrets: inherit
