--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -35,6 +35,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.5.2
+        with:
+          fetch-depth: 5
       
       - name: Set up Python 3
         uses: actions/setup-python@v4.6.1
@@ -91,6 +93,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.5.2
+        with:
+          fetch-depth: 5
       
       - name: Set up Python 3
         uses: actions/setup-python@v4.6.1
@@ -138,6 +142,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.5.2
+        with:
+          fetch-depth: 5
       
       - name: Set up Python 3
         uses: actions/setup-python@v4.6.1
@@ -166,6 +172,8 @@ jobs:
     steps:
       - name: Check out ${{ github.repository }}
         uses: actions/checkout@v3.5.2
+        with:
+          fetch-depth: 5
       
       - name: Set up Python 3
         uses: actions/setup-python@v4.6.1
