Do not git pull on pull_request in check.yml

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -44,6 +44,7 @@ jobs:
           python-version: '3'
       
       - name: Make sure the repository is up to date
+        if: github.event_name != pull_request
         run: git pull --rebase
       
       - name: Build docs
@@ -102,6 +103,7 @@ jobs:
           python-version: '3'
       
       - name: Make sure the repository is up to date
+        if: github.event_name != pull_request
         run: git pull --rebase
       
       - name: Run sphinx-lint
@@ -151,6 +153,7 @@ jobs:
           python-version: '3'
       
       - name: Make sure the repository is up to date
+        if: github.event_name != pull_request
         run: git pull --rebase
       
       - name: Run pospell
@@ -181,6 +184,7 @@ jobs:
           python-version: '3'
       
       - name: Make sure the repository is up to date
+        if: github.event_name != pull_request
         run: git pull --rebase
       
       - name: Install dependencies
