Fix string syntax in check.yml

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -44,7 +44,7 @@ jobs:
           python-version: '3'
       
       - name: Make sure the repository is up to date
-        if: github.event_name != pull_request
+        if: github.event_name != 'pull_request'
         run: git pull --rebase
       
       - name: Build docs
@@ -103,7 +103,7 @@ jobs:
           python-version: '3'
       
       - name: Make sure the repository is up to date
-        if: github.event_name != pull_request
+        if: github.event_name != 'pull_request'
         run: git pull --rebase
       
       - name: Run sphinx-lint
@@ -153,7 +153,7 @@ jobs:
           python-version: '3'
       
       - name: Make sure the repository is up to date
-        if: github.event_name != pull_request
+        if: github.event_name != 'pull_request'
         run: git pull --rebase
       
       - name: Run pospell
@@ -184,7 +184,7 @@ jobs:
           python-version: '3'
       
       - name: Make sure the repository is up to date
-        if: github.event_name != pull_request
+        if: github.event_name != 'pull_request'
         run: git pull --rebase
       
       - name: Install dependencies
