Avoid running check.yml as push on pull_request

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,6 +16,8 @@ on:
       - '*.po'
       - '**/*.po'
   push:
+    branches:
+      - '3.12'
     paths:
       - '.github/workflows/check.yml'
       - '.github/prepmsg.sh'
