Add list-obsolete.py to the list of path triggers in check.yml

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,6 +11,7 @@ on:
     paths:
       - '.github/workflows/check.yml'
       - '.github/prepmsg.sh'
+      - '.github/scripts/list-obsolete.py'
       - 'Makefile'
       - 'requirements.txt'
       - '*.po'
@@ -20,7 +21,8 @@ on:
       - '3.12'
     paths:
       - '.github/workflows/check.yml'
-      - '.github/prepmsg.sh'
+      - '.github/prepmsg.sh'      
+      - '.github/scripts/list-obsolete.py'
       - 'Makefile'
       - 'requirements.txt'
       - '*.po'
