prepmsg.sh is now in scripts dir - check.yml

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,7 +10,7 @@ on:
       - '3.12'
     paths:
       - '.github/workflows/check.yml'
-      - '.github/prepmsg.sh'
+      - '.github/scripts/prepmsg.sh'
       - '.github/scripts/list-obsolete.py'
       - 'Makefile'
       - 'requirements.txt'
@@ -21,7 +21,7 @@ on:
       - '3.12'
     paths:
       - '.github/workflows/check.yml'
-      - '.github/prepmsg.sh'      
+      - '.github/scripts/prepmsg.sh'      
       - '.github/scripts/list-obsolete.py'
       - 'Makefile'
       - 'requirements.txt'
@@ -75,7 +75,7 @@ jobs:
       - name: Prepare notification (only on error)
         if: steps.build.outcome == 'failure'
         id: prepare
-        run: .github/prepmsg.sh logs/build/err*.txt logs/notify.txt
+        run: .github/scripts/prepmsg.sh logs/build/err*.txt logs/notify.txt
         env:
           GITHUB_JOB: ${{ github.job }}
           GITHUB_RUN_ID: ${{ github.run_id }}
