Listar arquivo PO obsoletos (#136)
* Create list-obsolete.py

* Add list-obsolete job to check.yml

* Add list-obsolete.py to the list of path triggers in check.yml

* Quit with error when at least one file from list-obsolete.py

* Rename .github/prepmsg.sh to .github/scripts/prepmsg.sh

* prepmsg.sh is now in scripts dir - check.yml

* Make list-obsolete.py an executable

* Remove obsolete files

* Remove install/index.po

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,7 +10,8 @@ on:
       - '3.12'
     paths:
       - '.github/workflows/check.yml'
-      - '.github/prepmsg.sh'
+      - '.github/scripts/prepmsg.sh'
+      - '.github/scripts/list-obsolete.py'
       - 'Makefile'
       - 'requirements.txt'
       - '*.po'
@@ -20,7 +21,8 @@ on:
       - '3.12'
     paths:
       - '.github/workflows/check.yml'
-      - '.github/prepmsg.sh'
+      - '.github/scripts/prepmsg.sh'      
+      - '.github/scripts/list-obsolete.py'
       - 'Makefile'
       - 'requirements.txt'
       - '*.po'
@@ -73,7 +75,7 @@ jobs:
       - name: Prepare notification (only on error)
         if: steps.build.outcome == 'failure'
         id: prepare
-        run: .github/prepmsg.sh logs/build/err*.txt logs/notify.txt
+        run: .github/scripts/prepmsg.sh logs/build/err*.txt logs/notify.txt
         env:
           GITHUB_JOB: ${{ github.job }}
           GITHUB_RUN_ID: ${{ github.run_id }}
@@ -205,3 +207,21 @@ jobs:
         with:
           name: compendium
           path: compendium.po
+
+  # List PO files that no longer have a corresponding page in Python docs
+  list-obsolete:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out ${{ github.repository }}
+        uses: actions/checkout@v4.1.1
+      
+      - name: Set up Python 3
+        uses: actions/setup-python@v4.7.1
+        with:
+          python-version: '3'
+
+      - name: Generate POT files
+        run: make pot
+
+      - name: List obsolete PO files, if any
+        run: python3 .github/scripts/list-obsolete.py
