Use main branch instead of master

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -111,7 +111,7 @@ jobs:
         run: git pull --rebase
 
       - name: Add problem matcher
-        uses: rffontenelle/sphinx-lint-problem-matcher@master
+        uses: rffontenelle/sphinx-lint-problem-matcher@main
       
       - name: Run sphinx-lint
         continue-on-error: true
