Add sphinx-lint problem matcher to check.yml (#180)
* Add sphinx-lint problem matcher to check.yml

* Use main branch instead of master

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -109,6 +109,9 @@ jobs:
       - name: Make sure the repository is up to date
         if: github.event_name != 'pull_request'
         run: git pull --rebase
+
+      - name: Add problem matcher
+        uses: rffontenelle/sphinx-lint-problem-matcher@main
       
       - name: Run sphinx-lint
         continue-on-error: true
