--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -162,6 +162,9 @@ jobs:
       - name: Make sure the repository is up to date
         if: github.event_name != 'pull_request'
         run: git pull --rebase
+
+      - name: Install Hunspell
+        run: sudo apt install hunspell-pt-br -y
       
       - name: Run pospell
         continue-on-error: true
