ci: install hunspell for pospell

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -164,7 +164,7 @@ jobs:
         run: git pull --rebase
 
       - name: Install Hunspell
-        run: sudo apt install hunspell-pt-br -y
+        run: sudo apt install hunspell hunspell-pt-br -y
       
       - name: Run pospell
         continue-on-error: true
