--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -50,12 +50,14 @@ jobs:
       - name: Make sure the repository is up to date
         if: github.event_name != 'pull_request'
         run: git pull --rebase
-      
+
+      - name: Add problem matcher
+        uses: sphinx-doc/github-problem-matcher@v1
+        
       - name: Build docs
         continue-on-error: true
         id: build
         run: |
-          echo "::add-matcher::.github/problem-matchers/sphinx.json"
           make build
           
       - name: Upload artifact - docs
@@ -111,7 +113,7 @@ jobs:
         run: git pull --rebase
 
       - name: Add problem matcher
-        uses: rffontenelle/sphinx-lint-problem-matcher@main
+        uses: rffontenelle/sphinx-lint-problem-matcher@v1
       
       - name: Run sphinx-lint
         continue-on-error: true
