--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 LANGUAGE            ?= pt_BR
 
 # Branch used in the project and in CPython
-BRANCH              := 3.12
+BRANCH              := 3.13
 
 ############################
 # Environment variables for 'merge' target
@@ -13,13 +13,13 @@ BRANCH              := 3.12
 # Versions in this variable will have their translation replaced with changes
 # in currently active version being translated. These will have pomerge's
 # --overwrite flag set.
-BUGFIXBRANCH        ?= 3.11
+BUGFIXBRANCH        ?= 3.12
 
 # Version(s) that are considered security fixes or EOL. Let's make them more
 # stable, with more predictable state. These versions will not have translated
 # strings replaced with translations update. These will have pomerge's
 # --no-overwrite flag set.
-OLDERBRANCHES       ?= 3.10 3.9 3.8 3.7 3.6 2.7
+OLDERBRANCHES       ?= 3.11 3.10 3.9 3.8 3.7 3.6 2.7
 #
 ############################
 
@@ -40,7 +40,7 @@ SPHINXERRORHANDLING := "-W"
 #
 # Specific Transifex CLI Client version to install.
 # If unset, latest version will be used. 
-TX_CLI_VERSION      ?= '1.6.7'
+TX_CLI_VERSION      ?= '1.6.11'
 
 # Install directory of TX_CLI_DIR. Consider using a directory already
 # in the PATH environment variable because install script will add this
